fixed jumping anchors in link

--- a/public/css/docs.less
+++ b/public/css/docs.less
@@ -225,7 +225,7 @@ kbd {
   100% { background: white; }
 }
 
-#page-content-wrapper h2, #page-content-wrapper h4 {
+#page-content-wrapper h2, #page-content-wrapper h4, #page-content-wrapper h6 {
     border-top: 50px solid transparent;
     margin-top: -50px;
     -webkit-background-clip: padding-box;
